# spendbench

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: matrix-aider-openai.json  matrix-orientation.json  mcp-tokenslayer.json  mcp-tokenwise.json
docs/: copilot-protocol.md
spendbench/: aggregate.py  isolation.py  manual.py  pricing.py  probe_isolation.py  proxy.py  run_matrix.py  run_one.py
tasks/orientation/: express-view-sendfile.json  lodash-baseflatten.json  tokenslayer-mcp-entry.json
tests/: e2e_aider_proxy.py  e2e_openai_proxy.py
