[project]
name = "spendbench"
version = "0.1.0"
description = "Tokens-and-dollars-per-solved-task benchmark for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# Second harness: drives OpenAI / Gemini / Anthropic models through the proxy.
aider = ["aider-chat>=0.86"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spendbench"]
